@@ -1,12 +1,8 @@
 CFLAGS    += $(DEBUG_FLAGS)
 SUBDIRS    = doc intl po src plugins
 
-man_MANS   = gnome-mud.1
+EXTRA_DIST = ABOUT-NLS AUTHORS BUGS COPYING ChangeLog INSTALL NEWS PLUGIN.API \
+		README ROADMAP configure.in gnome-mud.desktop gnome-mud.lsm
 
-EXTRA_DIST = AUTHORS BUGS COPYING ChangeLog INSTALL Makefile.in NEWS \
-			 README ROADMAP configure configure.in ABOUT-NLS \
-			 install-sh mkinstalldirs gnome-mud.desktop \
-			 gnome-mud.lsm acconfig.h PLUGIN.API \
-			 $(man_MANS)
 Applicationsdir = $(datadir)/gnome/apps/Games
 Applications_DATA = gnome-mud.desktop
