@@ -2,10 +2,14 @@ dnl Process this file with
 dnl aclocal; automake; autoconf to produce a configure script.
 
 AC_INIT(src/gnome-mud.c)
-AM_INIT_AUTOMAKE(gnome-mud, 0.9.1)
+AM_INIT_AUTOMAKE(gnome-mud, 0.9.99.0)
 AM_CONFIG_HEADER(config.h)
 
 ALL_LINGUAS="es sv de ca fr"
+
+dnl Release date on LSM format (date +%d%b%y).
+LSMDATE="02Jul02"
+AC_SUBST(LSMDATE)
 
 dnl Pick up the GNOME macros
 AM_ACLOCAL_INCLUDE(macros)
@@ -168,6 +172,7 @@ AC_SUBST(CODELINES)
 
 AC_OUTPUT([
   Makefile
+  gnome-mud.lsm
   src/Makefile
   plugins/Makefile
   intl/Makefile
