@@ -1,4 +1,6 @@
 
 SUBDIRS = gnome-mud-manual gnome-mud-plugin-api
 
-EXTRA_DIST = sgmldocs.make
+man_MANS = gnome-mud.6
+
+EXTRA_DIST = sgmldocs.make $(man_MANS)
