@@ -1,11 +1,11 @@
 .\" Hey, EMACS: -*- nroff -*-
-.\" gnome-mud.1 is copyright 2000-2002 by
+.\" gnome-mud.6 is copyright 2000-2002 by
 .\" Jordi Mallach <jordi@sindominio.net>
 .\"
 .\" This is free documentation, see the latest version of the GNU General
 .\" Public License for copying conditions. There is NO warranty.
 .\"
-.TH GNOME-MUD 1 "January 5, 2002"
+.TH GNOME-MUD 6 "January 5, 2002"
 .SH NAME
 gnome-mud \- a mud client for the GNOME Desktop Environment.
 .SH SYNOPSIS
