@@ -2,7 +2,10 @@ localedir = $(datadir)/locale
 CFLAGS	         += $(DEBUG_FLAGS)
 INCLUDES          = -DLOCALEDIR=\"$(localedir)\" $(GNOME_INCLUDEDIR)
 EXTRA_DIST        = gnome-mud.c
-bin_PROGRAMS   	  = gnome-mud
+
+gamesdir = $(prefix)/games
+games_PROGRAMS = gnome-mud
+
 gnome_mud_SOURCES = data.c init.c keybind.c map.c \
                     net.c prefs.c window.c modules.c modules_api.c \
                     modules.h modules_api.h gnome-mud.h telnet.c mccpDecompress.c \
